// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer list renderer > snapshots list states > empty list 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2m [22m[2mN[22m[2mo[22m[2m [22m[2mp[22m[2ml[22m[2ma[22m[2mn[22m[2ms[22m                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`explorer list renderer > snapshots list states > filter highlights 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
[2mC[22m[2mu[22m[2mr[22m[2mr[22m[2me[22m[2mn[22m[2mt[22m                                                                                             
[1m[36m┃[39m[22m[1m[36m [39m[22m[1m[36m●[39m[22m[1m[36m [39m[22m[1m[4m[36mE[39m[24m[22mxplorer [1m[4m[36mT[39m[24m[22m[1m[4m[36mU[39m[24m[22mI library       [32m [39m[32ma[39m[32mc[39m[32mt[39m[32mi[39m[32mv[39m[32me[39m[1m[36m [39m[22m[1m[36m▌[39m[22m                                                            
[2m [22m[2m [22m[2m2[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2md[22m[2me[22m[2ms[22m[2mi[22m[2mg[22m[2mn[22m[2m-[22m[2ms[22m[2my[22m[2ms[22m[2mt[22m[2me[22m[2mm[22m                                                                       
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    "
`;

exports[`explorer list renderer > snapshots list states > multi-select active 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
[2mC[22m[2mu[22m[2mr[22m[2mr[22m[2me[22m[2mn[22m[2mt[22m                                                                                             
[2m┃[22m[2m [22m[2m◌[22m[2m [22mExplorer TUI library         [32m [39m[32ma[39m[32mc[39m[32mt[39m[32mi[39m[32mv[39m[32me[39m                                                            
[2m [22m[2m [22m[2m2[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2md[22m[2me[22m[2ms[22m[2mi[22m[2mg[22m[2mn[22m[2m-[22m[2ms[22m[2my[22m[2ms[22m[2mt[22m[2me[22m[2mm[22m                                                                       
[2m [22m[2m [22m[2m◌[22m[2m [22mACP telemetry converters      [33m [39m[33md[39m[33mr[39m[33ma[39m[33mf[39m[33mt[39m                                                            
[2m [22m[2m [22m[2m3[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2ma[22m[2mc[22m[2mp[22m                                                                                 
[2mB[22m[2ma[22m[2mc[22m[2mk[22m[2ml[22m[2mo[22m[2mg[22m                                                                                             
[2m [22m[2m [22m[2m◌[22m[2m [22mMaestro                                                                                         
[2m [22m[2m [22m[2m5[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2mp[22m[2mi[22m[2mp[22m[2me[22m[2ml[22m[2mi[22m[2mn[22m[2me[22m                                                                            
[1m[36m┃[39m[22m[1m[36m [39m[22m[1m[36m●[39m[22m[1m[36m [39m[22mTasks board sync          [31m [39m[31mb[39m[31ml[39m[31mo[39m[31mc[39m[31mk[39m[31me[39m[31md[39m[1m[36m [39m[22m[1m[36m▌[39m[22m                                                            
[2m [22m[2m [22m[2m1[22m[2mw[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2ms[22m[2mu[22m[2mp[22m[2me[22m[2mr[22m[2mi[22m[2mn[22m[2mt[22m[2me[22m[2mn[22m[2md[22m[2me[22m[2mn[22m[2mt[22m                                                                      
                                                                                                    "
`;

exports[`explorer list renderer > snapshots list states > wide list 1`] = `
"                                                                                                    
                                                                                                    
                                                                                                    
[2mC[22m[2mu[22m[2mr[22m[2mr[22m[2me[22m[2mn[22m[2mt[22m                                                                                             
[1m[36m┃[39m[22m[1m[36m [39m[22m[1m[36m●[39m[22m[1m[36m [39m[22mExplorer TUI library       [32m [39m[32ma[39m[32mc[39m[32mt[39m[32mi[39m[32mv[39m[32me[39m[1m[36m [39m[22m[1m[36m▌[39m[22m                                                            
[2m [22m[2m [22m[2m2[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2md[22m[2me[22m[2ms[22m[2mi[22m[2mg[22m[2mn[22m[2m-[22m[2ms[22m[2my[22m[2ms[22m[2mt[22m[2me[22m[2mm[22m                                                                       
[2m [22m[2m [22m[2m◌[22m[2m [22mACP telemetry converters      [33m [39m[33md[39m[33mr[39m[33ma[39m[33mf[39m[33mt[39m                                                            
[2m [22m[2m [22m[2m3[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2ma[22m[2mc[22m[2mp[22m                                                                                 
[2mB[22m[2ma[22m[2mc[22m[2mk[22m[2ml[22m[2mo[22m[2mg[22m                                                                                             
[2m [22m[2m [22m[2m◌[22m[2m [22mMaestro                                                                                         
[2m [22m[2m [22m[2m5[22m[2md[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2mp[22m[2mi[22m[2mp[22m[2me[22m[2ml[22m[2mi[22m[2mn[22m[2me[22m                                                                            
[2m┃[22m[2m [22m[2m◌[22m[2m [22mTasks board sync            [31m [39m[31mb[39m[31ml[39m[31mo[39m[31mc[39m[31mk[39m[31me[39m[31md[39m                                                            
[2m [22m[2m [22m[2m1[22m[2mw[22m[2m [22m[2m·[22m[2m [22m[2mk[22m[2mj[22m[2mo[22m[2mp[22m[2me[22m[2mk[22m[2m [22m[2m·[22m[2m [22m[2ms[22m[2mu[22m[2mp[22m[2me[22m[2mr[22m[2mi[22m[2mn[22m[2mt[22m[2me[22m[2mn[22m[2md[22m[2me[22m[2mn[22m[2mt[22m                                                                      
                                                                                                    "
`;
